--- a/pefbin/Cargo.toml
+++ b/pefbin/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+confy = "0.5.1"
 eframe = {version="0.24.1",features = ["persistence"]}
 egui_extras = {version="0.24.2",features = ["image"]}
+serde = "1.0.193"
+serde_derive = "1.0.193"
+winit = "0.29.7"
 
 
