--- a/pefbin/Cargo.toml
+++ b/pefbin/Cargo.toml
@@ -9,8 +9,18 @@ edition = "2021"
 confy = "0.5.1"
 eframe = {version="0.24.1",features = ["persistence"]}
 egui_extras = {version="0.24.2",features = ["image"]}
-serde = "1.0.193"
+serde = {version="1.0.193",features = ["derive"] }
 serde_derive = "1.0.193"
 winit = "0.29.7"
 
+pefapi = {path = "../pefapi"}
+tokio-serial = "5.4.4"
+tokio-util = {version="0.7.10",features=["codec"]}
+futures = "0.3.29"
+defaults = "0.2.0"
+tokio = {version="1.35.1",features=["full"]}
+thiserror = "1.0.56"
 
+[dependencies.openssl]
+version = "0.10" 
+features = ["vendored"] 
