--- a/pefbin/Cargo.toml
+++ b/pefbin/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3.29"
 defaults = "0.2.0"
 tokio = {version="1.35.1",features=["full"]}
 thiserror = "1.0.56"
+crossbeam-channel = "0.5"
 
 [dependencies.openssl]
 version = "0.10" 
