--- a/pefbin/Cargo.toml
+++ b/pefbin/Cargo.toml
@@ -21,6 +21,10 @@ defaults = "0.2.0"
 tokio = {version="1.35.1",features=["full"]}
 thiserror = "1.0.56"
 crossbeam-channel = "0.5"
+log = "0.4.20"
+log4rs = "1.2.0"
+chrono = "0.4.33"
+
 
 [dependencies.openssl]
 version = "0.10" 
