--- a/pefbin/Cargo.toml
+++ b/pefbin/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 confy = "0.5.1"
-eframe = {version="0.25.0",features = ["persistence"]}
+eframe = {version="0.25.0",features = ["persistence",]}
 egui_extras = { version = "0.25.0", features = ["image"] }
 serde = {version="1.0.193",features = ["derive"] }
 serde_derive = "1.0.193"
@@ -18,12 +18,14 @@ tokio-serial = "5.4.4"
 tokio-util = {version="0.7.10",features=["codec"]}
 futures = "0.3.29"
 defaults = "0.2.0"
-tokio = {version="1.35.1",features=["full"]}
+tokio = { version = "1.36.0", features = ["full"] }
 thiserror = "1.0.56"
 crossbeam-channel = "0.5"
 log = "0.4.20"
 log4rs = "1.2.0"
 chrono = "0.4.33"
+timer = "0.2.0"
+futures-timer = "3.0.3"
 
 
 [dependencies.openssl]
