--- a/pefbin/Cargo.toml
+++ b/pefbin/Cargo.toml
@@ -28,6 +28,7 @@ timer = "0.2.0"
 futures-timer = "3.0.3"
 url = "2.5.0"
 tungstenite = {version="0.21",features=["native-tls"]}
+byteorder = "1.5.0"
 
 
 [dependencies.openssl]
