--- a/pefbin/Cargo.toml
+++ b/pefbin/Cargo.toml
@@ -29,6 +29,8 @@ futures-timer = "3.0.3"
 url = "2.5.0"
 tungstenite = {version="0.21",features=["native-tls"]}
 byteorder = "1.5.0"
+thread_timer = "0.3.0"
+ihex = "3.0.0"
 
 
 [dependencies.openssl]
