--- a/pefapi/Cargo.toml
+++ b/pefapi/Cargo.toml
@@ -22,6 +22,7 @@ serde_derive = "1.0.195"
 defaults = "0.2.0"
 crossbeam-channel = "0.5"
 byteorder = "1.5.0"
+bytebuffer = "2.2.0"
 [dependencies.openssl]
 version = "0.10" 
 features = ["vendored"] 
