--- a/pefbin/Cargo.toml
+++ b/pefbin/Cargo.toml
@@ -31,6 +31,7 @@ tungstenite = {version="0.21",features=["native-tls"]}
 byteorder = "1.5.0"
 thread_timer = "0.3.0"
 ihex = "3.0.0"
+bytebuffer = "2.2.0"
 
 
 [dependencies.openssl]
